examples/conformance/valid/valid_decision_with_outcomes.flo
spec_version: "0.1"

process:
  id: invoice_gate_v1
  name: Invoice Gate

steps:
  - id: start
    kind: start

  - id: intake
    kind: task
    lane: finance

  - id: valid_decision
    kind: decision
    outcomes:
      approved: approve
      else: rework

  - id: rework
    kind: task
    lane: finance

  - id: approve
    kind: end

edges:
  - source: start
    target: intake
  - source: intake
    target: valid_decision
  - source: valid_decision
    target: approve
    outcome: approved
  - source: valid_decision
    target: rework
    outcome: else
  - source: rework
    target: approve
