examples/conformance/invalid/invalid_missing_start.flo
spec_version: "0.1"

process:
  id: invalid_missing_start
  name: Invalid Missing Start

steps:
  - id: intake
    kind: task

  - id: finish
    kind: end

edges:
  - source: intake
    target: finish
